Change executeCommand in AdministrationPlugin. Add command Parser from message: /command param.