@@ -1,15 +1,12 @@
 package page.devnet.telegrambot;
 
-import lombok.Setter;
 import org.telegram.telegrambots.meta.api.methods.PartialBotApiMethod;
+import org.telegram.telegrambots.meta.api.methods.send.SendMessage;
 import org.telegram.telegrambots.meta.api.objects.Message;
 import org.telegram.telegrambots.meta.api.objects.Update;
-import page.devnet.database.RepositoryManager;
 import page.devnet.pluginmanager.Plugin;
 import page.devnet.pluginmanager.PluginManager;
-import page.devnet.telegrambot.translate.TranslateBotPlugin;
-import page.devnet.telegrambot.util.CommandUtils;
-import page.devnet.wordstat.api.Statistics;
+import page.devnet.telegrambot.util.Parser;
 
 import java.io.IOException;
 import java.util.Collections;
@@ -17,23 +14,16 @@ import java.util.List;
 
 public class AdministrationPlugin implements Plugin<Update, List<PartialBotApiMethod>> {
 
-    private final String nameAdministrationPlugin = "adminPlug";
+    private final PluginManager pluginManager;
 
-    private PluginManager pluginManager;
-    private RepositoryManager repositoryManager;
-
-    public AdministrationPlugin(PluginManager<Update, List<PartialBotApiMethod>> pluginManager, RepositoryManager repositoryManager) {
+    public AdministrationPlugin(PluginManager<Update, List<PartialBotApiMethod>> pluginManager) {
         this.pluginManager = pluginManager;
-        this.repositoryManager = repositoryManager;
     }
 
     @Override
     public String getPluginId() {
-        return nameAdministrationPlugin;
+        return "adminPlug";
     }
-
-    @Setter
-    private CommandUtils commandUtils = new CommandUtils();
 
     @Override
     public List<PartialBotApiMethod> onEvent(Update event) {
@@ -43,7 +33,7 @@ public class AdministrationPlugin implements Plugin<Update, List<PartialBotApiMe
 
         if (event.getMessage().isCommand()) {
             try {
-                executeCommand(event.getMessage());
+                return executeCommand(event.getMessage());
             } catch (IOException e) {
                 e.printStackTrace();
             }
@@ -52,27 +42,27 @@ public class AdministrationPlugin implements Plugin<Update, List<PartialBotApiMe
 
         return null;
     }
+
     private List<PartialBotApiMethod> executeCommand(Message message) throws IOException {
-        var text = commandUtils.normalizeCmdMsg(message.getText());
-        switch (text) {
-            case "addStatsPlug":
-                pluginManager.enablePlugin(new WordStatisticPlugin(new Statistics(repositoryManager.getWordStorageRepository()), repositoryManager.getUserRepository()));
-                return Collections.emptyList();
-            case "addTransPlug":
-                pluginManager.enablePlugin(TranslateBotPlugin.newYandexTranslatePlugin());
-                return Collections.emptyList();
-            case "addLimitPlug":
-                pluginManager.enablePlugin(new WordLimiterPlugin(repositoryManager.getUnsubscribeRepository()));
-                return Collections.emptyList();
-            case "delStatsPlug":
-                pluginManager.disablePlugin("statsPlug");
-                return Collections.emptyList();
-            case "delTransCliPlug":
-                pluginManager.disablePlugin("transPlug");
-                return Collections.emptyList();
-            case "delLimitPlug":
-                pluginManager.disablePlugin("transPlug");
-                return Collections.emptyList();
+        Parser parserMessage = new Parser();
+        var parsedCommand = parserMessage.getCommandFromMessage(message.getText());
+        var commandParametr = parserMessage.getCommandParametrFromMessage(message.getText());
+
+        switch (parsedCommand) {
+            case ENABLE:
+                if (commandParametr.equals("")) {
+                    return List.of(new SendMessage(message.getChatId(), "please input pluginId as second parametr, example: '/enable limitPlug' " + pluginManager.getAllPlugins()).enableMarkdown(true));
+                }
+                Plugin pluginToEnable = pluginManager.getPluginById(commandParametr);
+                pluginManager.enablePlugin(pluginToEnable);
+                return List.of(new SendMessage(message.getChatId(), "Enable plugin " + pluginToEnable.getPluginId()).enableMarkdown(true));
+            case DISABLE:
+                if (commandParametr.equals("")) {
+                    return List.of(new SendMessage(message.getChatId(), "please input pluginId as second parametr, example: '/disable limitPlug' " + pluginManager.getAllPlugins()).enableMarkdown(true));
+                }
+                Plugin pluginToDisable = pluginManager.getPluginById(commandParametr);
+                pluginManager.disablePlugin(pluginToDisable.getPluginId());
+                return List.of(new SendMessage(message.getChatId(), "Disable plugin " + pluginToDisable.getPluginId()).enableMarkdown(true));
         }
         return Collections.emptyList();
     }
